/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.Edi.Requests";

message WholesaleServicesRequest {
  Period period = 1;
  ChargeType charge_type = 2; // New field
  optional string settlement_method = 3;
  optional string energy_supplier_id = 4;
  string requested_by_actor_id = 5;
  string requested_by_actor_role = 6;
  optional string charge_owner_id = 7; // New field
  optional string settlement_series_version = 8;
  optional string grid_area_code = 9;
  string business_reason = 10; // Is this process type?
  string resolution = 11; // New field
}

message Period {
  string start = 1;
  optional string end = 2;
}

// Should the WholesaleServicesRequest support multiple charge types?
// Is both charge_type and charge_id required?
message ChargeType {
  string charge_type = 1;
  string charge_id = 2;
}
