/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option csharp_namespace = "Energinet.DataHub.MarketRoles.IntegrationEventContracts";
/**
 * This message is sent out when an energy supplier has been changed.
 */
message EnergySupplierChanged {
  string MeteringPointId = 1;
  string EnergySupplierGLN = 2; // Unique Energy Supplier identifcation.
  string EffectiveDate = 3; // Date which the change of supplier goes into effect.
  string TransactionId = 4; // Unique transaction ID of the process. Needed to effectuate the correct accepted process.
}
